# telebot-stock-info

./: Dockerfile  deployment.yml  pyproject.toml
suid_bot/: bot.py  news_api.py  stock_api.py
