[tool.poetry]
name = "suid_bot"
version = "0.1.0"
description = ""
authors = ["yegor lopatin <yegor.lopatin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.1.63"
pyTelegramBotAPI = "^3.8.2"
black = "^21.7b0"
dataframe-image = "^0.1.1"
requests = "^2.26.0"
telegram = "^0.0.1"
cachetools = "^4.2.2"
finvizfinance = "^0.9.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
